# mori_pydeck

./: .gitignore  PlotPopByGridGivenUAbaseYearWithGivenPolygon.py  README.md  deck_map.html  japan_names.ipynb  japan_names.py  pydeck_selenium.ipynb  pydeck_selenium.py  pydeck_selenium_example.ipynb  pydeck_selenium_example.py  pyproject.toml  requirements.txt  ua_visualization.ipynb
output/: fig_tenjin-density_radius-2000m_in_ua_5_base-year_2020_v46_intermediate_bgcolor_none_2120.html
